--- a/cooking-microservice-dev.properties
+++ b/cooking-microservice-dev.properties
@@ -1,3 +1,3 @@
-products.property=ProductProfileProd
+kooking.property=KookingProfileDev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
